--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hyhousemaster",
   "version": "1.0",
   "description": "Hypixel Housing Bot framework written in NodeJS",
-  "main": "index.js",
+  "main": "src/index.js",
   "repository": {
     "url": "https://github.com/SDKSSH/HyHouseMaster",
     "type": "git"
