--- a/package.json
+++ b/package.json
@@ -22,6 +22,16 @@
   ],
   "homepage": "http://sdkssh.me/project/hyhousemaster/",
   "dependencies": {
-    "mineflayer": "^4.3.0"
+    "mineflayer": "^4.3.0",
+    "typescript": "^4.7.4"
+  },
+  "devDependencies": {
+    "@types/jest": "^28.1.5",
+    "@types/node": "^18.0.4",
+    "ts-jest": "^28.0.6",
+    "typescript": "^4.7.4"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
