--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "hyhousemaster",
   "version": "1.0",
   "description": "Hypixel Housing Bot framework written in NodeJS",
-  "main": "src/index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "repository": {
-    "url": "https://github.com/SDKSSH/HyHouseMaster",
+    "url": "git+https://github.com/SDKSSH/HyHouseMaster.git",
     "type": "git"
   },
   "author": "SDKSSH",
@@ -22,8 +26,7 @@
   ],
   "homepage": "http://sdkssh.me/project/hyhousemaster/",
   "dependencies": {
-    "mineflayer": "^4.3.0",
-    "typescript": "^4.7.4"
+    "mineflayer": "^4.3.0"
   },
   "devDependencies": {
     "@types/jest": "^28.1.5",
@@ -32,6 +35,9 @@
     "typescript": "^4.7.4"
   },
   "scripts": {
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "prepare": "npm run build",
     "test": "jest --no-cache --runInBand"
   }
 }
